--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/AnnVinogradova/Movie-next.js#readme",
 	"dependencies": {
+		"axios": "^1.3.4",
 		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
